# amazon-e2e-automation

./: .gitignore  README.md  conftest.py  project structure.txt  pyproject.toml  requirements.txt
pages/: amazon_page.py
tests/: test_galaxy_cart.py  test_iphone_cart.py
